--- a/scss/pages/_actividades.scss
+++ b/scss/pages/_actividades.scss
@@ -13,9 +13,9 @@ body{
         margin-top: 4rem;
     }
 
-  .fs-4{
-  font-size: 1rem;
-    font-style: italic;
+  .fs-5{
+  font-size: 1.2rem;
+   font-weight: 300;
     line-height: 1.8rem;
   }
 
